--- a/packages.config
+++ b/packages.config
@@ -2,5 +2,11 @@
 <packages>
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="EntityFramework.Firebird" version="7.10.1" targetFramework="net472" />
-  <package id="FirebirdSql.Data.FirebirdClient" version="7.10.1" targetFramework="net472" />
+  <package id="FirebirdSql.Data.FirebirdClient" version="8.5.4" targetFramework="net472" />
+  <package id="linq2db" version="3.6.0" targetFramework="net472" />
+  <package id="linq2db.Firebird" version="3.6.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
+  <package id="System.Reflection.Emit" version="4.7.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
 </packages>
